--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   badges: ^2.0.3
   shared_preferences: ^2.0.15
   flutter_rating_bar: ^4.0.1
+  firebase_auth: ^3.3.20
+  cloud_firestore: ^3.1.18
+  firebase_storage: ^10.2.18
 
 dev_dependencies:
   flutter_test:
