--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^3.3.20
   cloud_firestore: ^3.1.18
   firebase_storage: ^10.2.18
+  cached_network_image: ^3.2.1
 
 dev_dependencies:
   flutter_test:
